--- a/valeriya-bondarenko.html
+++ b/valeriya-bondarenko.html
@@ -1,280 +1,154 @@
-<!-- ============================= -->
-<!-- MAP BRAND STYLE (GLOBAL) -->
-<!-- ============================= -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Valeriya Bondarenko — MAP Scouting Report</title>
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  body {margin:0;background:#f5f7fb;font-family:'Montserrat',sans-serif;}
+  .prospect-page {max-width:960px;margin:0 auto 3rem;padding:1.5rem;color:#1a1a1a;}
 
-  .prospect-hero {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
-  }
+  /* HERO */
+  .prospect-hero {display:flex;flex-wrap:wrap;justify-content:space-between;gap:1.25rem;
+    padding:1.75rem;border-radius:14px;background:#2E5084;color:#fff;margin-bottom:2rem;}
+  .prospect-name {font-family:'Archivo Black';font-size:2rem;margin-bottom:.25rem;text-transform:uppercase;}
+  .prospect-tagline {font-size:1rem;font-weight:600;margin-bottom:.15rem;}
+  .prospect-subtitle {font-size:.9rem;opacity:.9;margin:0;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
+  .prospect-grade-card {min-width:200px;padding:1rem 1.25rem;border-radius:12px;
+    background:rgba(255,255,255,.15);border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(4px);}
+  .grade-label {font-size:.7rem;opacity:.8;text-transform:uppercase;}
+  .grade-score {font-family:'Archivo Black';font-size:2.2rem;margin:.2rem 0;}
+  .grade-tier {font-size:.9rem;font-weight:600;}
 
-  .prospect-tagline {
-    margin: 0 0 0.15rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
+  /* Recommendation Pill */
+  .recommendation-pill {display:flex;align-items:center;gap:6px;background:#fff;color:#2E5084;
+    padding:6px 12px;border-radius:30px;font-weight:600;font-size:.78rem;margin-top:.55rem;width:fit-content;}
+  .pill-box {width:12px;height:12px;border-radius:3px;}
+  .pill-yellow{background:#eab308;} /* Strong Recommendation */
 
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
+  /* META */
+  .prospect-meta{display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column{flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title{font-family:'Archivo Black';font-size:.9rem;color:#2E5084;margin-bottom:.7rem;text-transform:uppercase;}
+  .meta-list{list-style:none;margin:0;padding:0;}
+  .meta-list li{display:flex;justify-content:space-between;padding:.28rem 0;
+    border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value{text-align:right;margin-left:1rem;}
 
-  .prospect-grade-card {
-    min-width: 180px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
-
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
-
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    margin: 0;
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list li {
-    margin-bottom: 0.35rem;
-  }
+  /* CONTENT SECTIONS */
+  .prospect-section{background:#fff;border-radius:12px;padding:1.15rem 1.35rem;
+    border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title{font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body{font-size:.9rem;line-height:1.52;}
+  .section-list li{font-size:.9rem;line-height:1.52;margin-bottom:.38rem;}
 </style>
+</head>
 
+<body>
 <div class="prospect-page">
 
-  <!-- ============================= -->
-  <!-- HERO -->
-  <!-- ============================= -->
-  <section class="prospect-hero">
-    <div class="prospect-hero-main">
-      <h1 class="prospect-name">VALERIYA BONDARENKO</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Prospect · Behind-the-Scenes Archetype · Investment Banking Track</p>
-      <p class="prospect-subtitle">Columbia University · Swimming &amp; Diving 🏊‍♀️ · Class of 2028</p>
+<!-- ================= HERO ================= -->
+<section class="prospect-hero">
+  <div>
+    <h1 class="prospect-name">Valeriya Bondarenko</h1>
+    <p class="prospect-tagline">⭐️⭐️⭐️⭐️ Investment Banking Prospect</p>
+    <p class="prospect-subtitle">Columbia University · Swimming & Diving · Class of 2028</p>
+  </div>
+
+  <div class="prospect-grade-card">
+    <div class="grade-label">MAP Prospect Grade</div>
+    <div class="grade-score">90</div>
+    <div class="grade-tier">Round 2–3</div>
+
+    <div class="recommendation-pill">
+      <div class="pill-box pill-yellow"></div>
+      <div class="pill-box pill-yellow"></div>
+      <div class="pill-box pill-yellow"></div>
+      <span>Strong Recommendation</span>
     </div>
+  </div>
+</section>
 
-    <div class="prospect-grade-card">
-      <div class="grade-label">MAP Prospect Grade</div>
-      <div class="grade-score">90</div>
-      <div class="grade-tier">Round 3–4 Candidate</div>
-      <div class="grade-note">High-upside operator with strong late-season recovery</div>
-    </div>
-  </section>
 
-  <!-- ============================= -->
-  <!-- META (Prospect Info + MAP Profile) -->
-  <!-- ============================= -->
-  <section class="prospect-meta">
-
-    <!-- LEFT — PROSPECT INFO -->
-    <div class="meta-column">
-      <h2 class="meta-title">Prospect Info</h2>
-      <ul class="meta-list">
-        <li><span>College</span><span class="meta-value">Columbia University</span></li>
-        <li><span>Major</span><span class="meta-value">Operations Research</span></li>
-        <li><span>Minor</span><span class="meta-value">Applied Math & AI</span></li>
-        <li><span>Year</span><span class="meta-value">2028</span></li>
-        <li><span>GPA</span><span class="meta-value">3.2</span></li>
-        <li><span>Sport</span><span class="meta-value">Swimming & Diving</span></li>
-        <li><span>Hometown</span><span class="meta-value">Larkspur, CA</span></li>
-      </ul>
-    </div>
-
-    <!-- RIGHT — MAP PROFILE -->
-    <div class="meta-column">
-      <h2 class="meta-title">MAP Profile</h2>
-      <ul class="meta-list">
-        <li><span>Official Points</span><span class="meta-value">1269</span></li>
-        <li><span>Cumulative Rank</span><span class="meta-value">16 / 63</span></li>
-        <li><span>Phase 1 Rank</span><span class="meta-value">3 / 63</span></li>
-        <li><span>Phase 2 Rank</span><span class="meta-value">16 / 30</span></li>
-        <li>
-          <span>Personality</span>
-          <span class="meta-value">1. Behind the Scenes (Reserved Personality · Self-Assuredness · Attention to Detail)</span>
-        </li>
-        <li>
-          <span>Leadership</span>
-          <span class="meta-value">In-the-Bonus — Transactional (Transactional Leader · Structure · Accountability)</span>
-        </li>
-      </ul>
-    </div>
-
-  </section>
-
-  <!-- ============================= -->
-  <!-- OVERVIEW -->
-  <!-- ============================= -->
-  <section class="prospect-section">
-    <h2 class="section-title">Overview</h2>
-    <p class="section-body">
-      Valeriya came out of the gates strong in Phase 1, posting one of the highest early-season scores in the cohort. 
-      As a classic Behind-the-Scenes personality, she thrives when she can think deeply, work independently, and refine 
-      her output before bringing it to the table. The early analytics, discipline, and consistency were all there — and it 
-      helped her secure a top-three Phase 1 ranking.
-      <br><br>
-      The Playoffs introduced a steeper learning curve, and she initially struggled adjusting to the increased pace and 
-      the intensity of execution deliverables. Instead of folding, she recalibrated, recovered late, and closed strong — a 
-      meaningful signal for long-term growth potential. Her technical inclination (Python, data science, OR) and 
-      reliability with Student Support suggest genuine upside as she matures through more reps.
-    </p>
-  </section>
-
-  <!-- ============================= -->
-  <!-- STRENGTHS -->
-  <!-- ============================= -->
-  <section class="prospect-section">
-    <h2 class="section-title">Strengths</h2>
-    <ul class="section-list">
-      <li><strong>High Phase 1 performance:</strong> Top-three ranking reflects strong foundational ability when pace is stable.</li>
-      <li><strong>Deep technical curiosity:</strong> OR/Data Analytics/Applied Math academic path aligns with modern IB/quant trends.</li>
-      <li><strong>Reliable communicator:</strong> Proactive with Student Support — demonstrates maturity and accountability.</li>
-      <li><strong>Behind-the-Scenes strengths:</strong> Methodical, reflective, and detail-oriented in her approach to work.</li>
-      <li><strong>Strong late-season recovery:</strong> Ability to adjust, reset, and improve under pressure.</li>
-      <li><strong>Experience balancing complexity:</strong> Ivy-level coursework + D1 athletics reveals resilience and structure.</li>
+<!-- ================= META ================= -->
+<section class="prospect-meta">
+  <div class="meta-column">
+    <h2 class="meta-title">Prospect Info</h2>
+    <ul class="meta-list">
+      <li><span>School</span><span class="meta-value">Columbia University</span></li>
+      <li><span>Major</span><span class="meta-value">IEOR: Data Analysis</span></li>
+      <li><span>Minor</span><span class="meta-value">Applied Mathematics</span></li>
+      <li><span>Year</span><span class="meta-value">2028</span></li>
+      <li><span>GPA</span><span class="meta-value">3.2</span></li>
+      <li><span>Sport</span><span class="meta-value">Swimming & Diving</span></li>
+      <li><span>Hometown</span><span class="meta-value">Spanish Fort, AL</span></li>
     </ul>
-  </section>
+  </div>
 
-  <!-- ============================= -->
-  <!-- AREAS FOR DEVELOPMENT -->
-  <!-- ============================= -->
-  <section class="prospect-section">
-    <h2 class="section-title">Areas for Development</h2>
-    <ul class="section-list">
-      <li>Adjusting more quickly to elevated pace and pressure in Playoff-style environments.</li>
-      <li>Building more consistency across weekly assignments to match her strong highs.</li>
-      <li>Developing the vocal confidence to complement her natural behind-the-scenes strengths.</li>
-      <li>Continuing to sharpen financial modeling fundamentals to match peers with stronger GPAs.</li>
+  <div class="meta-column">
+    <h2 class="meta-title">MAP Profile</h2>
+    <ul class="meta-list">
+      <li><span>Fellowship Rank</span><span class="meta-value">16 / 78</span></li>
+      <li><span>Interview #1</span><span class="meta-value">83.5%</span></li>
+      <li><span>Interview #2</span><span class="meta-value">98.1%</span></li>
+      <li><span>Interview #3</span><span class="meta-value">95.4%</span></li>
+      <li><span>Personality</span><span class="meta-value">Behind the Scenes (Reserved, Detail-Oriented)</span></li>
+      <li><span>Leadership</span><span class="meta-value">Transactional Leader (Incentives, Accountability)</span></li>
+      <li><span>Teamwork</span><span class="meta-value">Logical (Analytical, Evidence-Based)</span></li>
     </ul>
-  </section>
+  </div>
+</section>
 
-  <!-- ============================= -->
-  <!-- PROJECTION -->
-  <!-- ============================= -->
-  <section class="prospect-section">
-    <h2 class="section-title">Projection</h2>
-    <p class="section-body">
-      A high-upside Round 3–4 candidate with one of the strongest underlying skill foundations in the class. 
-      If her Phase 1 version becomes the norm — disciplined, steady, thoughtful, technically grounded — she projects 
-      as a reliable, structured analyst who excels in execution-heavy environments. The personality–leadership pairing 
-      (Behind the Scenes × Transactional) makes her a natural systems-builder: someone who thrives in structured 
-      workflows and anchors team stability.
-      <br><br>
-      With continued reps and improved pacing, Valeriya has the potential to outperform expectations and develop into 
-      the type of disciplined operator banks love to have in the analyst bullpen.
-    </p>
-  </section>
+
+<!-- ================= WRITE-UPS ================= -->
+<section class="prospect-section">
+  <h2 class="section-title">Overview</h2>
+  <p class="section-body">
+    Valeriya came out of the gates strong in Phase 1, posting one of the highest early-season scores in the cohort. As a Behind-the-Scenes
+    personality, she thrives when given room to think deeply, refine independently, and bring polished work to the table. Early analytics,
+    discipline, and consistency were clear — helping her secure a top-three Phase 1 ranking.
+    <br><br>
+    The Playoffs introduced a steeper learning curve — but instead of folding, she recalibrated and closed strong, signaling growth capacity.
+    Her technical inclination (Python, Data Science, OR) and reliability through Student Support communication suggest genuine long-term upside.
+  </p>
+</section>
+
+<section class="prospect-section">
+  <h2 class="section-title">Strengths</h2>
+  <ul class="section-list">
+    <li>High Phase 1 performance — early top-three ranking.</li>
+    <li>Technical curiosity across OR/Data/Math.</li>
+    <li>Reliable communicator — proactive with support.</li>
+    <li>Reflective, detail-oriented operating style.</li>
+    <li>Strong late-season recovery signal.</li>
+    <li>Complex workload capacity — Ivy + D1 sport.</li>
+  </ul>
+</section>
+
+<section class="prospect-section">
+  <h2 class="section-title">Areas for Development</h2>
+  <ul class="section-list">
+    <li>Adjusting faster to playoff speed and intensity.</li>
+    <li>Consistency to match her top-end moments.</li>
+    <li>Grow vocal confidence in group settings.</li>
+    <li>Further modeling + valuation fluency.</li>
+  </ul>
+</section>
+
+<section class="prospect-section">
+  <h2 class="section-title">Projection</h2>
+  <p class="section-body">
+    A Round 2–3 MAP prospect with one of the stronger technical foundations in the cohort. When operating at her Phase 1 level — disciplined,
+    thoughtful, analytically grounded — she looks like a future execution-heavy analyst who adds stability and structure to deal teams.
+    <br><br>
+    With continued reps, pacing comfort, and valuation sharpening, Valeriya has real potential to outperform expectations and emerge as a
+    reliable, systems-oriented operator — the kind of analyst who holds teams together quietly, consistently, and effectively.
+  </p>
+</section>
 
 </div>
-
+</body>
+</html>
